--- a/platforms/ios-swift/release-notes/index.html
+++ b/platforms/ios-swift/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-5-september-2021">2.4.5 (September 2021)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-4-6-october-2021">2.4.6 (October 2021)</a></li>
+              <li><a href="#2-4-5-september-2021">2.4.5 (September 2021)</a></li>
               <li><a href="#2-4-4-september-2021">2.4.4 (September 2021)</a></li>
               <li><a href="#2-4-3-september-2021">2.4.3 (September 2021)</a></li>
               <li><a href="#2-4-2-august-2021">2.4.2 (August 2021)</a></li>
@@ -303,6 +304,17 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the Tealium for Swift library.</p>
+
+<h2 id="2-4-6-october-2021">2.4.6 (October 2021)</h2>
+
+<p><strong>Low Impact Changes</strong></p>
+
+<ul>
+<li>Fixed a bug that could cause a crash when deallocating a RemoteCommand before sending HTTP requests to our internal command.</li>
+<li>Fixed a bug that prevented data layer variables from being persisted for sessions longer than 30 minutes.</li>
+<li>Avoided registration for <code>isLowPowerModeEnabled</code> notification if the <code>batterySaver</code> feature is not enabled, avoiding possible crashes on an iOS 15 internal deadlock.</li>
+<li>Fixed a bug where the tracking call queue would not get processed after receiving consent.</li>
+</ul>
 
 <h2 id="2-4-5-september-2021">2.4.5 (September 2021)</h2>
 
@@ -7531,7 +7543,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  September 28, 2021 
+    <span>This page was last updated:  October 5, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
