--- a/platforms/android-kotlin/data-layer/index.html
+++ b/platforms/android-kotlin/data-layer/index.html
@@ -659,6 +659,12 @@ tealium.dataLayer.putBoolean(<span style="color:#b84">&#34;frequent_visitor&#34;
 </tr>
 
 <tr>
+<td><code>device_logical_resolution</code></td>
+<td>Logical screen resolution in points (width x height)</td>
+<td><code>414x896</code></td>
+</tr>
+
+<tr>
 <td><code>device_orientation</code></td>
 <td>Orientation of device at time of call</td>
 <td><code>Portrait</code>, <code>Landscape Left</code>, <code>Landscape Right</code>, <code>Portrait UpsideDown</code>, <code>Face Up</code>, <code>Face Down</code>, <code>Unknown</code></td>
@@ -8057,7 +8063,7 @@ tealium.dataLayer.putBoolean(<span style="color:#b84">&#34;frequent_visitor&#34;
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  April 9, 2021 
+    <span>This page was last updated:  November 9, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
