--- a/platforms/flutter/release-notes/index.html
+++ b/platforms/flutter/release-notes/index.html
@@ -249,7 +249,8 @@ var utag_data = {
 
   <aside class="fixed-lTK mw5-l right-0 f6 bl-l b--moon-gray pv4 pv0-ns ph4-l nested-links nested-copy-line-height">
       <p class="b">Table of Contents</p>
-      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-0-0-may-2021">2.0.0 (May 2021)</a></li>
+      <nav id="TableOfContents"><ul class="toc-h2"><li><a href="#2-0-2-november-2021">2.0.2 (November 2021)</a></li>
+              <li><a href="#2-0-0-may-2021">2.0.0 (May 2021)</a></li>
               </nav>
   </aside></div>
 
@@ -283,6 +284,13 @@ var utag_data = {
   
 
 <p>Below is a complete list of changes for each release of the Tealium plugin for Flutter.</p>
+
+<h2 id="2-0-2-november-2021">2.0.2 (November 2021)</h2>
+
+<ul>
+<li>Kotlin dependency upgraded to 1.2.8</li>
+<li>Swift dependency upgraded to 2.4.6</li>
+</ul>
 
 <h2 id="2-0-0-may-2021">2.0.0 (May 2021)</h2>
 
@@ -7295,7 +7303,7 @@ var utag_data = {
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  May 10, 2021 
+    <span>This page was last updated:  December 2, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
