--- a/platforms/getting-started/deep-linking/index.html
+++ b/platforms/getting-started/deep-linking/index.html
@@ -329,6 +329,8 @@ deep_link_param_campaign_code <span style="font-weight:bold">=</span> <span styl
 
 <p>Deep link tracking is automatically enabled in Tealium for iOS (Swift v2.x).</p>
 
+<p>Disable automatic tracking of deep links by setting the <code>info.plist</code> key <code>TealiumAutotrackingDeepLinkEnabled</code> to <code>false</code>.</p>
+
 <h3 id="swift-v1-x">Swift v1.x</h3>
 
 <p>Tealium for iOS (Swift v1.x) requires a single line of code to be added to your app&rsquo;s <code>AppDelegate</code> class to enable deep linking.</p>
@@ -7400,7 +7402,7 @@ deep_link_param_campaign_code <span style="font-weight:bold">=</span> <span styl
   </span>
 	<span id="feedback_comment">
 		<textarea id="feedback_textarea" type="text" placeholder="Tell us how we can make this article better." rows="4" cols="70"></textarea>
-    <span>This page was last updated:  September 28, 2021 
+    <span>This page was last updated:  December 2, 2021 
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <button disabled id="feedback_submit" class="f6 ph3 pv1 br2 dib tc mv3 bg-primary-color white hover-bg-blue link">Send Feedback</button></span>
   </span>
