deploy: Tealium/documentation-integrations@3b8c403229f43191b872a3f6673945cae1c66e3a

--- a/platforms/ios-swift-v1/module-list/connectivity/index.html
+++ b/platforms/ios-swift-v1/module-list/connectivity/index.html
@@ -7511,9 +7511,9 @@ var utag_data = {
 <div class="prose" id="prose">
   <h2 id="how-it-works">How It Works</h2>
 <p>The Connectivity module automatically queues dispatches if the device reports no network connectivity, using Apple's Reachability API to monitor the network connectivity.</p>
-<p>Each time a tracking call is sent, the module checks the current connection status, and begins queueing requests if the internet is unreachable. Each time a new tracking call is received, it checks the connection status again, and if the connectivity state has changed to reachable again, previously queued requests are all sent, and the queue is cleared.</p>
-<p>Additionally, as of 1.6.5, the connectivity status is automatically checked every 30 seconds by default (overridable via <code>TealiumConfig</code>) after the status has been detected as &ldquo;not reachable.&rdquo; If the status changes from &ldquo;not reachable&rdquo; to &ldquo;reachable,&rdquo; the queue is flushed automatically (meaning all tracking calls in the queue are dispatched).</p>
-<p>The automatic connectivity check is canceled once the connectivity status changes to &ldquo;reachable&rdquo; and resumes when the status is detected as &ldquo;not reachable.&rdquo; This conserves resources by only monitoring for connection changes when strictly necessary.</p>
+<p>Each time a tracking call is sent, the module checks the current connection status, and begins queueing requests if the internet is unreachable. Each time a new tracking call is received, it checks the connection status again, and if the connectivity state has changed to reachable again, previously-queued requests are all sent, and the queue is cleared.</p>
+<p>Additionally, as of 1.6.5, the connectivity status is automatically checked every 30 seconds by default (overridable via <code>TealiumConfig</code>) after the status has been detected as &ldquo;not reachable&rdquo;. If the status changes from &ldquo;not reachable&rdquo; to &ldquo;reachable&rdquo;, the queue is flushed automatically (meaning all tracking calls in the queue are dispatched).</p>
+<p>The automatic connectivity check is canceled once the connectivity status changes to &ldquo;reachable&rdquo; and resumes when the status is detected as &ldquo;not reachable&rdquo;. This conserves resources by only monitoring for connection changes when strictly necessary.</p>
 <h2 id="usage">Usage</h2>
 <p>Usage of this module is strongly recommended. Without it, dispatches fail and be dropped if the device is offline.</p>
 <p>The following platforms are supported:</p>
