--- a/platforms/ios-swift-v1/module-list/remote-commands/index.html
+++ b/platforms/ios-swift-v1/module-list/remote-commands/index.html
@@ -7630,7 +7630,7 @@ print(&quot;Remote commands not available&quot;)
 }
 </code></pre>
 <h3 id="remove"><code>remove()</code></h3>
-<p>Removes a previously registered remote command to prevent it being triggered again.</p>
+<p>Removes a previously-registered remote command to prevent it being triggered again.</p>
 <pre><code class="language-swift">remove(commandWithId: String)
 </code></pre>
 <pre><code class="language-swift">// assumes &quot;tealium&quot; previously instantiated
