--- a/platforms/ios-swift-v1/module-list/autotracking/index.html
+++ b/platforms/ios-swift-v1/module-list/autotracking/index.html
@@ -7562,7 +7562,7 @@ var utag_data = {
 <p>To create a bridging header:</p>
 <ol>
 <li>
-<p>In your Swift project, create a new file. When prompted to select a file type, select &ldquo;Objective-C File.&rdquo;</p>
+<p>In your Swift project, create a new file. When prompted to select a file type, select &ldquo;Objective-C File&rdquo;.</p>
 </li>
 <li>
 <p>Give this file a temporary name, such as <code>placeholder.m</code>, as you are going to remove it later.</p>
