--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8" />
 </head>
 <body class="container">
-        <header><h1>Welcome to <script type="text/javascript">
+        <header><h1>stolen by nooneyouknow@myyahoo.com!!---Welcome to <script type="text/javascript">
         document.write(location.host);
         </script><h1></header>
         <div id="wrapper">
